<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_claim_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/claim_tv_title"
            android:layout_weight="1"
            android:textSize="26dp" />
        <Button 
        android:id="@+id/btn_back"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:text="@string/back"
        android:layout_weight="1"
        />

    </LinearLayout>
    
    <ListView 
        android:id="@+id/lv_claim"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        ></ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="3dp"
        android:background="@color/black" />
    
    <TextView 
        android:id="@+id/tv_claim_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/claim_tv_add"
        android:textSize="26dp"
		android:layout_marginLeft="10dp" 
		android:layout_marginTop="5dp"       
        />
    
        <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:id="@+id/tv_claim_insurance"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/insurance_detail_number"
                />
            <Spinner
       		android:id="@+id/spinner_claiminsuranceid"
         	android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	 />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:id="@+id/tv_claim_reason"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/claim_tv_reason"
                />
            <EditText 
                android:id="@+id/et_insurance_detail_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>
       
    </LinearLayout>
    
    <Button 
        android:id="@+id/btn_claim"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:text="@string/claim_btn"
        android:layout_marginLeft="210dp"
        />

</LinearLayout>
