<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    

    <LinearLayout
        android:id="@+id/bottomlinearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F0FFF0" >
        
        <Button
            android:id="@+id/btn_allcalims"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F0FFF0"
            android:text="@string/staffui_bottombtn_allclaims" />
        <Button
            android:id="@+id/btn_staffmy"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F0FFF0"
            android:text="@string/main_tv7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
        <ImageView 
        android:id="@+id/img_my"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/usericon"
        />
        <TextView 
        android:id="@+id/tv_staffname"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="Sara Scott"
        />
        <Button 
        android:id="@+id/btn_staff_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_btn_height"
        android:text="@string/my_btn_info"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

        <Button 
        android:id="@+id/btn_staff_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_btn_height"
        android:text="@string/my_btn_logout"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    </LinearLayout>

</RelativeLayout>
