<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            >
            <TextView 
                android:id="@+id/stafftv_claim_detail_id"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/claim_detail_id"
                />
            <TextView 
                android:id="@+id/staffet_claim_detail_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                />
        </LinearLayout>
        
            <TextView 
                android:id="@+id/stafftv_claim_detail_forins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
                android:text="@string/claim_detail_forinsid"
                />
            <TextView 
                android:id="@+id/staffet_claim_detail_forins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:text="bkdbaskkv"
                />
         <TextView 
                android:id="@+id/stafftv_claim_detail_forinstype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
                android:text="@string/claim_detail_forinstype"
                />
            <TextView 
                android:id="@+id/staffet_claim_detail_forinstype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:text="bkdbaskkv"
                />
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            >
            <TextView 
                android:id="@+id/stafftv_claim_detail_statu"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/claim_detail_statu"
                />
            <TextView 
                android:id="@+id/staffet_claim_detail_statu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            >
            <TextView 
                android:id="@+id/stafftv_claim_detail_date"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/claim_detail_date"
                />
            <TextView 
                android:id="@+id/staffet_claim_detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>
            <TextView 
                android:id="@+id/stafftv_claim_detail_problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
                android:text="@string/claim_detail_problem"
                />

            <TextView
                android:id="@+id/staffet_claim_detail_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
            android:background="@layout/detailui"
                android:text="problem" />
        
            <TextView 
                android:id="@+id/tv_claim_detail_solution"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
                android:text="@string/claim_detail_solution"
                />

            <EditText
                android:id="@+id/et_claim_detail_solution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:inputType="textMultiLine" >               
            </EditText>
             
    </LinearLayout>

</RelativeLayout>
